feat: add songs route and update swagger
